# qimm-linux

./: README.md  configure.ac  meson.build
clients/: editor.c  ivi-shell-user-interface.c  multi-resource.c  simple-shm.c  terminal.c  weston-info.c  window.c  window.h
compositor/: compositor-drm.c  compositor-openwfd.c  compositor-wayland.c  compositor.c  compositor.h  main.c  meego-tablet-shell.c  screen-share.c  screenshooter.c  shell.c  xserver-launcher.c
desktop-shell/: shell.c
fullscreen-shell/: fullscreen-shell.c
libweston/: compositor-drm.c  compositor.c  compositor.h  launcher-direct.c  launcher-weston-launch.c  screenshooter.c  weston-launch.c
man/: weston.ini.man
qimm/: meson.build
qimm/client/: main.c  meson.build
qimm/compositor/: main.c  meson.build
qimm/include/: qimm.h  share.h
qimm/project/: config.c  data.c  meson.build  project.c
qimm/project/projects/: common.yaml
qimm/project/types/: common.yaml  dashboard.yaml
qimm/protocol/: meson.build  qimm-desktop-shell.xml
qimm/share/: file.c  meson.build  share.c  yaml.c
qimm/shell/: client.c  desktop.c  layer.c  layout.c  meson.build  output.c  process.c  shell.c
src/: compositor-drm.c  compositor-rdp.c  compositor-x11.c  compositor.c  compositor.h  log.c  weston-launch.c
src/xwayland/: launcher.c  window-manager.c
tests/: subsurface-test.c  weston-test.c
